--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/wetzelbe/bitpanda-hass.git"
   },
   "author": "Benedict Wetzel",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wetzelbe/bitpanda-hass/issues"
   },
